--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 font-family: 'logging';
             }
         </style>
-        <title>PS4 Auto Jailbreak (Psfree-1.5rc1 &Lapse)</title>
+        <title>OBADA HOSTS</title>
         <script>
             function showMessage(msg) {
                 document.getElementById("message").innerHTML = msg;
