--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تفعيل PS4 9.00 بدون USB</title>
+    <title>OBADA HOSTS</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>تفعيل PS4 9.00 بدون USB</h1>
+        <h1>OBADA HOSTS</h1>
         
         <div class="instructions">
             <h2>تعليمات الاستخدام:</h2>
