--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <br>
 <div id="menu">
 <h1 style="font-size: 27px;color: yellow;">PRESS BUTTON TO JAILBREAK</h1>
-<a href="900/index.html"><button class="btn" onmouseover="msgs.innerHTML='PS4 5.05 FW GoldHEN Host'" onmouseout="msgs.innerHTML='OBADA HOSTS'"> 9.00 </button></a>
-<a href="soon/index.html"><button class="btn" onmouseover="msgs.innerHTML='PS4 5.05 FW Host v2.0'" onmouseout="msgs.innerHTML='OBADA HOSTS'"> SOON </button></a>
+<a href="900/index.html"><button class="btn" onmouseover="msgs.innerHTML='9.00 Hosts'" onmouseout="msgs.innerHTML='OBADA HOSTS'"> 9.00 </button></a>
+<a href="soon/index.html"><button class="btn" onmouseover="msgs.innerHTML='Soon'" onmouseout="msgs.innerHTML='OBADA HOSTS'"> SOON </button></a>
