--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 id="msgs">OBADA HOSTS</h1>
+<h1 id="msgs">SOON</h1>
 <hr>
 <br>
-<div id="menu">
-<h1 style="font-size: 27px;color: yellow;">PRESS BUTTON TO JAILBREAK</h1>
-<a href="900/index.html"><button class="btn" onmouseover="msgs.innerHTML='9.00 Hosts'" onmouseout="msgs.innerHTML='OBADA HOSTS'"> 9.00 </button></a>
-<a href=""><button class="btn" onmouseover="msgs.innerHTML='Soon'" onmouseout="msgs.innerHTML='OBADA HOSTS'"> SOON </button></a>
