--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 id="msgs">SOON</h1>
+<h1 id="msgs">OBADA HOSTS</h1>
 <hr>
 <br>
+<div id="menu">
+<h1 style="font-size: 30px;color: yellow;">SOON</h1>
